Implement mock API
